Added license to meta

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,5 +3,6 @@ galaxy_info:
   role_name: composer
   author: phizzl
   description: Role to run composer install on PHP projects
+  license: "MIT"
 
 dependencies: []
