--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,5 +4,10 @@ galaxy_info:
   author: phizzl
   description: Role to run composer install on PHP projects
   license: "MIT"
+  min_ansible_version: 2.8
+  platforms:
+    - name: Ubuntu
+      versions:
+        - all
 
 dependencies: []
